# HQC-crypto2021

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: functional-test-128.yaml  functional-test-192.yaml  functional-test-256.yaml
doc/: main_page.txt
hqc-128/: Makefile
hqc-128/src/: api.h  gf2x.h  parameters.h  reed_muller.c  reed_solomon.c
hqc-192/: Makefile
hqc-192/doc/: main_page.txt
hqc-192/src/: api.h  gf2x.c  parameters.h  parsing.h  reed_solomon.c  vector.c  vector.h
hqc-256/: Makefile
hqc-256/src/: api.h  gf.c  hqc.c  kem.c  main_kat.c  parameters.h  parsing.c  reed_solomon.c
report/: const.csv  timing.csv
report/beamer/: beamerinnerthemepolimi.sty  codes.tex  hqc.tex  implementation.tex  introduction.tex  main.aux  main.bbl  main.blg  main.nav  main.out  main.tex  main.toc  masking.tex  refs.bib  results.tex
report/tex/: conclusions.tex  hqcoverview.tex  implementation.tex  intro.tex  main.tex  masking.tex  preliminaries.tex  refs.bib  results.tex
scripts/: multUnroll.py  parseConstResults.py  parseResults.py  parseTimingResults.py  runConstTest.sh  runTimingTest.sh  serialRead.sh
src/: gf2x.c  gf2x.h  hqc.c  kem.c  parameters.h  parsing.c  reed_solomon.c  vector.c  vector.h
src/benchmarking/: board_config.h  const_test.c  const_test_kem.c  const_test_pke.c  functional_test.c  timing_stats.h  timing_test.c  timing_test_kem.c  timing_test_pke.c
src/codes/: code.c  code.h  reed_muller.c  reed_muller.h  reed_solomon.c  reed_solomon.h
src/common/: api.h  parameters.h  parsing.c  vector.c  vector.h
src/fields/: fft.c  gf.c  (+5 more)
(+19 files in other folders)
